# LapSum

./: LICENSE  README.md
experiments_of_paper/: README.md
experiments_of_paper/soft-permutation/: mnist_input.py  multi_mnist_cnn.py  run_permute.py  run_permute.sh
lapsum/: MANIFEST.in  README.md  pyproject.toml  setup.py
lapsum/lapsum/permute/: __init__.py
lapsum/lapsum/permute/cpu/: soft_permute.cpp
lapsum/lapsum/permute/cuda/: soft_permute.cu  soft_permute_cuda.cpp
lapsum/lapsum/permute/extension/: __init__.py  loss.py  soft_permute.py
lapsum/lapsum/rank/: __init__.py
lapsum/lapsum/rank/cpu/: soft_rank.cpp
lapsum/lapsum/rank/cuda/: soft_rank.cu  soft_rank_cuda.cpp
lapsum/lapsum/rank/extension/: soft_rank.py
lapsum/lapsum/sort/: __init__.py
lapsum/lapsum/sort/cpu/: soft_sort.cpp
lapsum/lapsum/sort/cuda/: soft_sort.cu  soft_sort_cuda.cpp
lapsum/lapsum/sort/extension/: soft_sort.py
lapsum/lapsum/topk/: __init__.py
lapsum/lapsum/topk/cpu/: log_soft_topk.cpp  soft_topk.cpp
lapsum/lapsum/topk/cuda/: log_soft_topk.cu  log_soft_topk_cuda.cpp  soft_topk.cu  soft_topk_cuda.cpp
lapsum/lapsum/topk/extension/: __init__.py  log_soft_topk.py  soft_topk.py
lapsum/tests/: test_topk.py
notebooks/: soft_topk.ipynb
tutorial_notebooks/: log-soft_topk.ipynb
